syntax = "proto3";

package identity.v1;

option go_package = "github.com/hawful70/shop-identity-service/internal/identity/transport/grpc/pb";

message User {
  string id = 1;
  string email = 2;
  string username = 3;
  string provider = 4;
  string provider_id = 5;
}

message GetUserRequest {
  string user_id = 1;
}

message GetUserResponse {
  User user = 1;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  User user = 2;
  TokenClaims claims = 3;
  string error = 4;
}

message TokenClaims {
  string user_id = 1;
  string email = 2;
  string username = 3;
}

service IdentityService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}
